# pac_sonpike

pac_back/: .env  .gitignore  Cargo.toml
pac_back/src/: main.rs  templates.rs
pac_back/src/repositories/: mod.rs
pac_back/src/services/: mod.rs
pac_back/templates/: home.html
pac_back/templates/base/: footer.html  layout.html
