[package]
name = "pac_back"
version = "0.1.0"
edition = "2021"

[[bin]]
name="pac_back"

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["tokio", "multipart"] }
dotenvy = "0.15.7"
gpx = "0.10.0"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [] }
bytes = "1.5.0"
